mobile responsiveness for header and hero section on smaller phones, fixed.

--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -220,37 +220,38 @@
 @media only screen and (min-width: 361px) and (max-width: 510px) {
   /* Styles */
   #header {
-    padding: 0;
+    /* padding: 0;
     margin: 0;
     height: auto;
-    font-size: 1.5rem;
+    font-size: 1.5rem; */
+    /* background-color: red; */
   }
   #header .container {
     /* overright bootstrap rule */
-    flex-wrap: nowrap !important;
+    /* flex-wrap: nowrap !important; */
   }
 
   .tamara-logo {
-    max-width: 250px;
+    /* max-width: 250px;
     width: 180px;
     margin: auto;
-    object-fit: contain;
+    object-fit: contain; */
   }
   .nav__slide {
     width: 100%;
   }
   .nav__container {
-    margin-left: -60px;
+    /* margin-left: -60px; */
   }
 
   .nav__container .nav__lang a {
-    font-size: 1.5rem;
+    /* font-size: 1.5rem; */
   }
 
   .img__pos {
     position: relative;
     backdrop-filter: blur(5px);
-    top: 40px;
+    top: -70px;
     width: 600px;
     object-fit: contain;
   }
@@ -271,8 +272,8 @@
     left: 90vw;
   }
   .img__pos + img {
-    top: 59vh;
-    left: 20vw;
+    /* top: 59vh;
+    left: 20vw; */
   }
 
   #hero {
@@ -283,16 +284,20 @@
     height: fit-content;
   }
   #hero .container > div {
-    display: flex;
+    /* display: flex;
     flex-direction: column;
     height: max-content;
     align-items: center;
-    align-content: space-between;
+    align-content: space-between; */
   }
 
   #hero h1 {
-    font-size: 2.8rem;
-    padding: 0.15rem;
+    /* font-size: 2.8rem;
+    padding: 0.15rem; */
+  }
+
+  .hero-header {
+    margin-top: -150px !important;
   }
   .btn-container {
     margin-left: 0;
